# Vacation-Planer

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  TODOS.md  deploy.sh  display.py  insights.py  main.py  models.py  pyproject.toml  questionnaire.py  railway.toml  requirements.txt  scheduler.py  storage.py
api/: deps.py  main.py  schemas.py
api/routes/: search.py  sessions.py
frontend/: .env.production  next.config.mjs  nixpacks.toml  package.json  railway.toml
frontend/app/: layout.tsx  page.tsx  types.ts
frontend/app/api/[...path]/: route.ts
frontend/app/components/: FlightCard.tsx  HotelCard.tsx  InsightBadge.tsx  SearchForm.tsx
frontend/app/results/: page.tsx
providers/: __init__.py  amadeus.py  cars.py  duffel.py  duffel_stays.py  rapidapi_flights.py
scripts/: test_live.py
tests/: test_api.py  test_cars.py  test_duffel_deeplink.py  test_duffel_stays_ext.py  test_hotels.py  test_providers.py  test_rapidapi_flights.py  test_search_core.py  test_storage_insights.py
tests/fixtures/: amadeus_flight_response.json  duffel_flight_response.json  duffel_stays_response.json
